# cwtools

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  SECURITY.md  VSCODE_INTEGRATION.md  cwtools.slnx
.github/: dependabot.yml
.github/workflows/: build-bench.yml  codeql.yml  deny.yml  release.yml  test.yml
.pi-subagents/artifacts/: 377e36e6-2894-42bf-a2ca-d31fbfa77bc9_reviewer_input.md  377e36e6-2894-42bf-a2ca-d31fbfa77bc9_reviewer_transcript.jsonl
.pi-subagents/artifacts/outputs/377e36e6-2894-42bf-a2ca-d31fbfa77bc9/: reviewer-findings.md
CWTools/Game/: Game.fs  Helpers.fs  ResourceManager.fs
CWTools/Game/CK2/: CK2Game.fs
CWTools/Validation/: Validation.fs
cwtools-rs/: BUILD.md  CONTRIBUTING.md  Cargo.toml  PROFILING.md  clippy.toml  deny.toml
cwtools-rs/.cargo/: config.toml
cwtools-rs/crates/cache/: Cargo.toml
cwtools-rs/crates/cache/src/: cache_format.rs  convert.rs  io.rs  lib.rs
cwtools-rs/crates/cache/tests/: roundtrip.rs
cwtools-rs/crates/cli/: Cargo.toml
cwtools-rs/crates/cli/examples/: md_bench.rs
cwtools-rs/crates/cli/src/: main.rs  vanilla_cache.rs
cwtools-rs/crates/cli/tests/: cli_tests.rs
cwtools-rs/crates/cli/tests/fixtures/: invalid.txt
cwtools-rs/crates/cli/tests/fixtures/discover/mod_a/common/: test.txt
cwtools-rs/crates/cli/tests/fixtures/discover/mod_a/events/: test.txt
cwtools-rs/crates/cli/tests/fixtures/loc/: bad_l_english.yml  l_english.yml
cwtools-rs/crates/cli/tests/fixtures/loc/localisation/: l_english.yml
cwtools-rs/crates/cli/tests/fixtures/loc_error/localisation/: l_english.yml
cwtools-rs/crates/cli/tests/fixtures/loc_info_only/localisation/: l_english.yml
cwtools-rs/crates/cli/tests/fixtures/loc_invalid/localisation/: bad_l_english.yml
cwtools-rs/crates/cli/tests/fixtures/rules/: test.cwt
cwtools-rs/crates/driver/: Cargo.toml
cwtools-rs/crates/driver/src/: lib.rs
cwtools-rs/crates/driver/tests/: smoke.rs
cwtools-rs/crates/error_codes/: Cargo.toml
cwtools-rs/crates/error_codes/src/: lib.rs
cwtools-rs/crates/file_manager/: Cargo.toml
cwtools-rs/crates/file_manager/benches/: glob.rs
cwtools-rs/crates/file_manager/src/: file_manager.rs  lib.rs
cwtools-rs/crates/file_manager/tests/: bench_md.rs  gui_gfx_discovery.rs
cwtools-rs/crates/game/: Cargo.toml
cwtools-rs/crates/game/benches/: scope.rs
cwtools-rs/crates/game/src/: constants.rs  docs_parser.rs  lib.rs  scope.rs  scope_engine.rs  scope_registry.rs
cwtools-rs/crates/game/src/scope_engine/: engine.rs  links.rs  mod.rs
cwtools-rs/crates/index/: Cargo.toml
cwtools-rs/crates/index/src/: collect.rs  dynamic_values.rs  lib.rs  path_match.rs  type_index.rs  vanilla_cache.rs  variables.rs
cwtools-rs/crates/info/: Cargo.toml
cwtools-rs/crates/info/src/: debug_test.rs  inline_expansion.rs  lib.rs  vanilla_cache.rs
cwtools-rs/crates/localization/: Cargo.toml
cwtools-rs/crates/localization/benches/: loc.rs
cwtools-rs/crates/localization/src/: commands.rs  csv_parser.rs  lib.rs  loc_index.rs  loc_string.rs  pipeline.rs  scope_validation.rs  service.rs  validation.rs  yaml_parser.rs
cwtools-rs/crates/lsp/: Cargo.toml
cwtools-rs/crates/lsp/src/: code_action.rs  completion.rs  config.rs  hover.rs  inlay.rs  main.rs  navigation.rs  paths.rs  position.rs  scan.rs  symbols.rs  validate.rs  workspace_cache.rs
cwtools-rs/crates/lsp/src/completion/: builders.rs  cwt.rs  mod.rs  resolve.rs  scope_names.rs  snippets.rs
cwtools-rs/crates/lsp/tests/: lsp_tests.rs
cwtools-rs/crates/lsp/tests/fixtures/rules/: test.cwt
cwtools-rs/crates/parser/: Cargo.toml
cwtools-rs/crates/parser/benches/: parse.rs
cwtools-rs/crates/parser/examples/: probe.rs
cwtools-rs/crates/parser/src/: ast.rs  fix.rs  lib.rs  parser.rs
cwtools-rs/crates/profiling/: Cargo.toml
cwtools-rs/crates/profiling/src/: lib.rs
cwtools-rs/crates/rules/: Cargo.toml
cwtools-rs/crates/rules/src/: config_validation.rs  lib.rs  post_process.rs  rules_converter.rs  rules_types.rs  ruleset_loader.rs
cwtools-rs/crates/rules/src/rules_converter/: comment_directives.rs  enums.rs  field_parser.rs  mod.rs  scopes_links.rs  subtypes.rs  types.rs
cwtools-rs/crates/rules/tests/: debug_ast.rs  load_ruleset_dir.rs  parse_cwt.rs  replace_scope_nesting.rs  test_new_features.rs
cwtools-rs/crates/string_table/: Cargo.toml
cwtools-rs/crates/string_table/benches/: intern.rs
cwtools-rs/crates/string_table/src/: string_table.rs
cwtools-rs/crates/validation/: Cargo.toml
cwtools-rs/crates/validation/src/: common.rs  ctx.rs  error_codes.rs  lib.rs  loc_field.rs  missing_loc.rs  position.rs  resolve.rs  rule_core.rs  scope.rs  subtype.rs
cwtools-rs/crates/validation/src/per_game/: common.rs  eu4.rs  hoi4.rs  mod.rs  stellaris.rs  structural.rs
cwtools-rs/crates/validation/src/rule_core/: alias.rs  children.rs  leaf.rs  matching.rs  mod.rs  subtype_merge.rs  suggest.rs
cwtools-rs/crates/validation/tests/: cardinality_position.rs  default_bool.rs  dispatch_resolution.rs  error_if_only_match.rs  gui_music_enum_false_positives.rs  leafvalue_cardinality.rs  localisation_field.rs  mathexpr_codes.rs  objecttypes_disambiguation.rs  position_resolver.rs  rules_engine_codes.rs  seg_codes.rs  stellaris_config.rs  structural_codes.rs  subtype_completion_union.rs  subtype_membership.rs  type_routing_and_inline.rs  validation.rs  var_codes.rs
cwtools-rs/docs/: ARCHITECTURE.md  ARCHITECTURE_BUGS.md  ARCHITECTURE_REVIEW.md  ARCH_SWEEP_PLAN_2026-07-21.md  ERROR_CODES.md  FIX_SPEC_2026-06-09.md  MATH_EXPRESSIONS.md
cwtools-rs/examples/: md_bench.rs
docs/: CRUFT_AUDIT.md
specs/: code-review-findings.md  rust-fsharp-parity-gaps.md  rust-remaining-work.md  rust-rewrite-cleanup.md
