[workspace]
members = [
    "crates/profiling",
    "crates/string_table",
    "crates/parser",
    "crates/file_manager",
    "crates/cache",
    "crates/rules",
    "crates/validation",
    "crates/game",
    "crates/localization",
    "crates/info",
    "crates/lsp",
    "crates/cli",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/MillenniumDawn/cwtools"

[workspace.dependencies]
cwtools_profiling = { path = "crates/profiling" }
cwtools_string_table = { path = "crates/string_table" }
cwtools_parser = { path = "crates/parser" }
cwtools_file_manager = { path = "crates/file_manager" }
cwtools_cache = { path = "crates/cache" }
cwtools_rules = { path = "crates/rules" }
cwtools_validation = { path = "crates/validation" }
cwtools_game = { path = "crates/game" }
cwtools_localization = { path = "crates/localization" }
cwtools_info = { path = "crates/info" }
cwtools_lsp = { path = "crates/lsp" }
cwtools_cli = { path = "crates/cli" }
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
globset = "0.4"
memmap2 = "0.9"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bumpalo = "3.16"
rkyv = { version = "0.8", features = ["std", "bytecheck"] }
bytecheck = "0.8"
zstd = "0.13"
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
rayon = "1.10"
