[package]
name = "cwtools_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "cwtools"
path = "src/main.rs"

[dependencies]
cwtools_parser = { workspace = true }
cwtools_file_manager = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
