[package]
name = "cwtools_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "cwtools"
path = "src/main.rs"

[dependencies]
cwtools_parser = { workspace = true }
cwtools_file_manager = { workspace = true }
cwtools_string_table = { workspace = true }
cwtools_cache = { workspace = true }
cwtools_rules = { workspace = true }
cwtools_validation = { workspace = true }
cwtools_info = { workspace = true }
cwtools_driver = { workspace = true }
cwtools_game = { workspace = true }
cwtools_localization = { workspace = true }
cwtools_profiling = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
