[package]
name = "cwtools_driver"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cwtools_parser = { workspace = true }
cwtools_file_manager = { workspace = true }
cwtools_string_table = { workspace = true }
cwtools_rules = { workspace = true }
cwtools_validation = { workspace = true }
cwtools_index = { workspace = true }
cwtools_game = { workspace = true }
cwtools_localization = { workspace = true }
rayon = { workspace = true }
