[package]
name = "cwtools_file_manager"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cwtools_parser = { workspace = true }
cwtools_string_table = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
tempfile = "3"
criterion = { workspace = true }

[[bench]]
name = "glob"
harness = false
