[package]
name = "cwtools_index"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tracing = { workspace = true }
cwtools_parser = { workspace = true }
cwtools_file_manager = { workspace = true }
cwtools_string_table = { workspace = true }
cwtools_rules = { workspace = true }
serde_json = { workspace = true }
rkyv = { workspace = true }
zstd = { workspace = true }
rayon = { workspace = true }
