[package]
name = "cwtools_info"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tracing = { workspace = true }
cwtools_parser = { workspace = true }
cwtools_string_table = { workspace = true }
cwtools_rules = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
