[package]
name = "cwtools_localization"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cwtools_error_codes = { workspace = true }
cwtools_string_table = { workspace = true }
cwtools_game = { workspace = true }
cwtools_file_manager = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
tempfile = "3"
