[package]
name = "cwtools_localization"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cwtools_error_codes = { workspace = true }
cwtools_game = { workspace = true }
cwtools_file_manager = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
tempfile = "3"
criterion = { workspace = true }

[[bench]]
name = "loc"
harness = false
