[package]
name = "cwtools_lsp"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cwtools-server"
path = "src/main.rs"

[dependencies]
cwtools_parser = { workspace = true }
cwtools_string_table = { workspace = true }
cwtools_file_manager = { workspace = true }
cwtools_rules = { workspace = true }
cwtools_validation = { workspace = true }
cwtools_info = { workspace = true }
tower-lsp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
