[package]
name = "cwtools_lsp"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cwtools-server"
path = "src/main.rs"

[dependencies]
cwtools_parser = { workspace = true }
cwtools_string_table = { workspace = true }
cwtools_file_manager = { workspace = true }
cwtools_rules = { workspace = true }
cwtools_validation = { workspace = true }
cwtools_info = { workspace = true }
cwtools_game = { workspace = true }
cwtools_localization = { workspace = true }
cwtools_profiling = { workspace = true }
tower-lsp = { workspace = true }
tokio = { workspace = true, features = ["time"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
