[package]
name = "cwtools_parser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tracing = { workspace = true }
cwtools_string_table = { workspace = true }
thiserror = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "parse"
harness = false
