[package]
name = "cwtools_rules"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cwtools_parser = { workspace = true }
cwtools_string_table = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
