[package]
name = "cwtools_validation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cwtools_error_codes = { workspace = true }
cwtools_parser = { workspace = true }
cwtools_rules = { workspace = true }
cwtools_string_table = { workspace = true }
cwtools_game = { workspace = true }
cwtools_index = { workspace = true }
cwtools_localization = { workspace = true }
tracing = { workspace = true }
rustc-hash = { workspace = true }
smallvec = { workspace = true }
